--- a/topologies/segment-routing/docker-compose.yml
+++ b/topologies/segment-routing/docker-compose.yml
@@ -147,7 +147,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-00,xr_name=Gi0/0/0/0;linux:xr-10,xr_name=Gi0/0/0/1;linux:xr-130,xr_name=Gi0/0/0/2,chksum
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.101
@@ -198,7 +198,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-20,xr_name=Gi0/0/0/0;linux:xr-30,xr_name=Gi0/0/0/1;linux:xr-140,xr_name=Gi0/0/0/2,chksum
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.102
@@ -249,7 +249,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-40,xr_name=Gi0/0/0/0;linux:xr-50,xr_name=Gi0/0/0/1;linux:xr-00,xr_name=Gi0/0/0/2;linux:xr-80,xr_name=Gi0/0/0/3
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.103
@@ -300,7 +300,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-40,xr_name=Gi0/0/0/0;linux:xr-60,xr_name=Gi0/0/0/1;linux:xr-20,xr_name=Gi0/0/0/2;linux:xr-90,xr_name=Gi0/0/0/3
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.104
@@ -351,7 +351,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-70,xr_name=Gi0/0/0/0;linux:xr-50,xr_name=Gi0/0/0/1;linux:xr-10,xr_name=Gi0/0/0/2;linux:xr-100,xr_name=Gi0/0/0/3
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.105
@@ -402,7 +402,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-70,xr_name=Gi0/0/0/0;linux:xr-60,xr_name=Gi0/0/0/1;linux:xr-30,xr_name=Gi0/0/0/2;linux:xr-110,xr_name=Gi0/0/0/3
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.106
@@ -453,7 +453,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-80,xr_name=Gi0/0/0/0;linux:xr-90,xr_name=Gi0/0/0/1
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.107
@@ -502,7 +502,7 @@ services:
       XR_EVERY_BOOT_CONFIG: /etc/xrd/startup.cfg
       XR_INTERFACES: linux:xr-100,xr_name=Gi0/0/0/0;linux:xr-110,xr_name=Gi0/0/0/1
       XR_MGMT_INTERFACES: linux:eth0,xr_name=Mg0/RP0/CPU0/0,chksum,snoop_v4,snoop_v4_default_route
-    image: xrd-control-plane:latest-24.4
+    image: ios-xr/xrd-control-plane:25.3.1
     networks:
       mgmt:
         ipv4_address: 10.10.20.108
