Add network interface detection and macvlan update functions: enhance common utilities for improved sandbox environment setup

--- a/topologies/segment-routing/xrd-1-startup.cfg
+++ b/topologies/segment-routing/xrd-1-startup.cfg
@@ -19,7 +19,7 @@ ssh server vrf default
 username cisco
  group root-lr
  group cisco-support
- password C1sco12345
+ secret 10 $6$nq.zzBkzDwz1z...$SgtSjbwGrRiPc99P7wEJaxd.tJE5rF.7uXA/cD3UqNzTIc7NfaxqHAIWMkwW8jgaV48J1O.oiG79pXNhXoHKO1
 !
 vrf 100
  address-family ipv4 unicast
