--- a/topologies/always-on/xrd-3-startup.cfg
+++ b/topologies/always-on/xrd-3-startup.cfg
@@ -26,27 +26,25 @@ router static
 !
 end
 
+
+
 interface MgmtEth0/RP0/CPU0/0
- ipv4 address 172.28.0.10/16
-!
-
-!! lab1-xrd1
-interface GigabitEthernet0/0/0/0
- ipv4 address 172.30.1.200/24
-!
-
-!! xrd1-xrd2
-interface GigabitEthernet0/0/0/1
- ipv4 address 10.0.3.1/24
+ vrf MGMT
+ ipv4 address 172.28.0.30/16
 !
 
 !! xrd1-xrd3
 interface GigabitEthernet0/0/0/6
- ipv4 address 10.0.4.1/24
+ ipv4 address 10.0.4.3/24
+!
+
+!! xrd2-xrd3
+interface GigabitEthernet0/0/0/1
+ ipv4 address 10.0.5.3/24
 !
 
 interface Loopback0
- ipv4 address 1.1.1.1/32
+ ipv4 address 3.3.3.3/32
 !
 
 !! ---------------
@@ -54,6 +52,7 @@ interface Loopback0
 !! ---------------
 
 ssh server
+ssh server vrf MGMT
 
 !! ---------------
 !! OSPF config
@@ -74,17 +73,10 @@ router ospf 1
 !! BGP config
 !! ---------------
 
-router static
- address-family ipv4 unicast
-  9.0.0.1/32 172.31.1.1
- !
-!
-
 router bgp 1
- bgp router-id 1.1.1.1
+ bgp router-id 3.3.3.3
  bgp update-delay 0
  address-family ipv4 unicast
-  redistribute static
  !
  neighbor 2.2.2.2
   remote-as 1
