--- a/topologies/always-on/xrd-2-startup.cfg
+++ b/topologies/always-on/xrd-2-startup.cfg
@@ -1,4 +1,4 @@
-hostname sandbox-iosxr-1
+hostname xrd-2
 logging monitor debugging
 ssh server vrf default
 banner motd "Hello there! Hoping you are having a great day
@@ -19,22 +19,15 @@ netconf-yang agent
 !
 netconf agent tty
 !
-router static
- address-family ipv4 unicast
-  0.0.0.0/0 MgmtEth0/RP0/CPU0/0 10.10.20.254
- !
-!
-!! lab2-xrd2
-interface GigabitEthernet0/0/0/2
- ipv4 address 172.31.1.200/24
-!
-!! xrd1-xrd2
 interface GigabitEthernet0/0/0/0
- ipv4 address 10.0.3.2/24
+ description to xrd-1 Gi0/0/0/0
+ ipv4 address 10.1.2.2/24
+ no shutdown
 !
-!! xrd2-xrd3
-interface GigabitEthernet0/0/0/1
- ipv4 address 10.0.5.2/24
+interface GigabitEthernet0/0/0/2
+ description to xrd-3 Gi0/0/0/2
+ ipv4 address 10.2.3.2/24
+ no shutdown
 !
 interface Loopback0
  ipv4 address 2.2.2.2/32
@@ -44,8 +37,6 @@ router ospf 1
   interface Loopback0
   !
   interface GigabitEthernet0/0/0/0
-  !
-  interface GigabitEthernet0/0/0/1
   !
   interface GigabitEthernet0/0/0/2
   !
