--- a/topologies/always-on/xrd-1-startup.cfg
+++ b/topologies/always-on/xrd-1-startup.cfg
@@ -1,4 +1,4 @@
-hostname sandbox-iosxr-1
+hostname xrd-1
 logging monitor debugging
 ssh server vrf default
 banner motd "Hello there! Hoping you are having a great day
@@ -19,17 +19,15 @@ netconf-yang agent
 !
 netconf agent tty
 !
-!! lab1-xrd1
 interface GigabitEthernet0/0/0/0
- ipv4 address 172.30.1.200/24
+ description to xrd-2 Gi0/0/0/0
+ ipv4 address 10.1.2.1/24
+ no shutdown
 !
-!! xrd1-xrd2
 interface GigabitEthernet0/0/0/1
- ipv4 address 10.0.3.1/24
-!
-!! xrd1-xrd3
-interface GigabitEthernet0/0/0/6
- ipv4 address 10.0.4.1/24
+ description to xrd-3 Gi0/0/0/1
+ ipv4 address 10.1.3.1/24
+ no shutdown
 !
 interface Loopback0
  ipv4 address 1.1.1.1/32
@@ -38,22 +36,16 @@ router ospf 1
  area 0
   interface Loopback0
   !
+  interface GigabitEthernet0/0/0/0
+  !
   interface GigabitEthernet0/0/0/1
   !
-  interface GigabitEthernet0/0/0/6
-  !
- !
-!
-router static
- address-family ipv4 unicast
-  9.0.0.1/32 172.31.1.1
  !
 !
 router bgp 1
  bgp router-id 1.1.1.1
  bgp update-delay 0
  address-family ipv4 unicast
-  redistribute static
  !
  neighbor 2.2.2.2
   remote-as 1
