--- a/topologies/always-on/xrd-3-startup.cfg
+++ b/topologies/always-on/xrd-3-startup.cfg
@@ -1,4 +1,4 @@
-hostname sandbox-iosxr-1
+hostname xrd-3
 logging monitor debugging
 ssh server vrf default
 banner motd "Hello there! Hoping you are having a great day
@@ -19,18 +19,15 @@ netconf-yang agent
 !
 netconf agent tty
 !
-router static
- address-family ipv4 unicast
-  0.0.0.0/0 MgmtEth0/RP0/CPU0/0 10.10.20.254
- !
-!
-!! xrd1-xrd3
-interface GigabitEthernet0/0/0/6
- ipv4 address 10.0.4.3/24
-!
-!! xrd2-xrd3
 interface GigabitEthernet0/0/0/1
- ipv4 address 10.0.5.3/24
+ description to xrd-1 Gi0/0/0/1
+ ipv4 address 10.1.3.3/24
+ no shutdown
+!
+interface GigabitEthernet0/0/0/2
+ description to xrd-2 Gi0/0/0/2
+ ipv4 address 10.2.3.3/24
+ no shutdown
 !
 interface Loopback0
  ipv4 address 3.3.3.3/32
@@ -41,7 +38,7 @@ router ospf 1
   !
   interface GigabitEthernet0/0/0/1
   !
-  interface GigabitEthernet0/0/0/6
+  interface GigabitEthernet0/0/0/2
   !
  !
 !
