Upgrade to 25.3.1 & Add build process (#5)
* Adding base files

* Fix path for SSH setup script in Makefile

* Update network interface in docker-compose file and add interface retrieval command in notes

* Refactor SSH setup and add segment routing deployment scripts

* Update deploy-segment-routing script to use correct file paths for segment routing topology

* Update deploy-segment-routing script to use correct file paths and remove backup file

* Fix deploy-segment-routing script permissions, add undeploy and follow logs targets

* Refactor deploy-segment-routing script to enhance error handling and output messaging

* Refactor deploy-segment-routing script to utilize common utilities for improved readability and maintainability

* Update .gitignore to include xrd-*.tgz files and enhance notes with additional git commands

* Add scripts for XRd container extraction and loading, including format detection utilities

* Enhance XRd container scripts: add extraction and loading targets, improve environment variable handling, and update output messaging for clarity

* Refactor XRd environment setup and image handling: streamline variable usage, update image naming conventions, and enhance utility functions for better clarity and maintainability

* Add network interface detection and macvlan update functions: enhance common utilities for improved sandbox environment setup

* Refactor cleanup target in Makefile and update README: rename clean-xrd to cleanup-temp-files, enhance cleanup process, and document deployment workflow for better clarity

* Add clone-xrd-tools target to Makefile and update README: implement cloning of xrd-tools repository and document the process in the README for improved setup instructions

* Enhance Makefile and scripts: add validate-environment target, streamline paths, and improve extraction process for better usability and clarity

* Refactor clone-xrd-tools target in Makefile and add clone-xrd-tools.sh script: streamline cloning process 

--- a/topologies/segment-routing/xrd-5-startup.cfg
+++ b/topologies/segment-routing/xrd-5-startup.cfg
@@ -12,38 +12,38 @@
 !! See the License for the specific language governing permissions and
 !! limitations under the License.
 
-hostname xrd-6
+hostname xrd-5
 logging console debugging
 logging monitor debugging
 ssh server vrf default
 username cisco
  group root-lr
  group cisco-support
- password C1sco12345
+ secret 10 $6$nq.zzBkzDwz1z...$SgtSjbwGrRiPc99P7wEJaxd.tJE5rF.7uXA/cD3UqNzTIc7NfaxqHAIWMkwW8jgaV48J1O.oiG79pXNhXoHKO1
 !
 interface Loopback0
  no shut
- ipv4 address 100.100.100.106 255.255.255.255
+ ipv4 address 100.100.100.105 255.255.255.255
 !
 interface Loopback1
  no shut
- ipv4 address 101.104.106.255 255.255.255.255
+ ipv4 address 101.103.105.255 255.255.255.255
 !
 interface GigabitEthernet0/0/0/0
  no shut
- ipv4 address 100.105.106.106 255.255.255.0
+ ipv4 address 100.105.106.105 255.255.255.0
 !
 interface GigabitEthernet0/0/0/1
  no shut
- ipv4 address 100.104.106.106 255.255.255.0
+ ipv4 address 100.103.105.105 255.255.255.0
 !
 interface GigabitEthernet0/0/0/2
  no shut
- ipv4 address 100.102.106.106 255.255.255.0
+ ipv4 address 100.101.105.105 255.255.255.0
 !
 interface GigabitEthernet0/0/0/3
  no shut
- ipv4 address 100.106.108.106 255.255.255.0
+ ipv4 address 100.105.108.105 255.255.255.0
 !
 prefix-set INFRA
   100.100.100.107/32,
@@ -59,7 +59,7 @@ route-policy INFRA
 end-policy
 !
 router isis 1
- net 49.0100.0100.0100.0106.00
+ net 49.0100.0100.0100.0105.00
  log adjacency changes
  affinity-map red bit-position 128
  affinity-map blue bit-position 129
@@ -87,17 +87,17 @@ router isis 1
  interface Loopback0
   passive
   address-family ipv4 unicast
-   prefix-sid index 106
-   prefix-sid algorithm 128 index 206
-   prefix-sid algorithm 129 index 306
+   prefix-sid index 105
+   prefix-sid algorithm 128 index 205
+   prefix-sid algorithm 129 index 305
   !
  !
  interface Loopback1
   passive
   address-family ipv4 unicast
-   prefix-sid index 1101 n-flag-clear
-   prefix-sid algorithm 128 index 1102 n-flag-clear
-   prefix-sid algorithm 129 index 1103 n-flag-clear
+   prefix-sid index 1001 n-flag-clear
+   prefix-sid algorithm 128 index 1002 n-flag-clear
+   prefix-sid algorithm 129 index 1003 n-flag-clear
   !
  !
  interface GigabitEthernet0/0/0/0
