--- a/topologies/segment-routing/xrd-6-startup.cfg
+++ b/topologies/segment-routing/xrd-6-startup.cfg
@@ -12,60 +12,54 @@
 !! See the License for the specific language governing permissions and
 !! limitations under the License.
 
-hostname xrd-2
+hostname xrd-6
 logging console debugging
 logging monitor debugging
 ssh server vrf default
 username cisco
  group root-lr
  group cisco-support
- password C1sco12345
-!
-vrf 100
- address-family ipv4 unicast
-  import route-target
-   100:100
-  !
-  export route-policy 100
-  export route-target
-   100:100
-  !
- !
+ secret 10 $6$nq.zzBkzDwz1z...$SgtSjbwGrRiPc99P7wEJaxd.tJE5rF.7uXA/cD3UqNzTIc7NfaxqHAIWMkwW8jgaV48J1O.oiG79pXNhXoHKO1
 !
 interface Loopback0
  no shut
- ipv4 address 100.100.100.102 255.255.255.255
+ ipv4 address 100.100.100.106 255.255.255.255
+!
+interface Loopback1
+ no shut
+ ipv4 address 101.104.106.255 255.255.255.255
 !
 interface GigabitEthernet0/0/0/0
  no shut
- ipv4 address 100.102.104.102 255.255.255.0
+ ipv4 address 100.105.106.106 255.255.255.0
 !
 interface GigabitEthernet0/0/0/1
  no shut
- ipv4 address 100.102.106.102 255.255.255.0
+ ipv4 address 100.104.106.106 255.255.255.0
 !
 interface GigabitEthernet0/0/0/2
  no shut
- vrf 100
- ipv4 address 10.3.1.2 255.255.255.0
+ ipv4 address 100.102.106.106 255.255.255.0
 !
-extcommunity-set opaque 100
-  100
+interface GigabitEthernet0/0/0/3
+ no shut
+ ipv4 address 100.106.108.106 255.255.255.0
+!
+prefix-set INFRA
+  100.100.100.107/32,
+  100.100.100.108/32
 end-set
 !
-route-policy 100
-  set extcommunity color 100
-  pass
+route-policy INFRA
+  if destination in INFRA then
+    pass
+  else
+    drop
+  endif
 end-policy
 !
-router static
- address-family ipv4 unicast
-  0.0.0.0/1 Null0
- !
-!
 router isis 1
- net 49.0100.0100.0100.0102.00
- distribute link-state level 1
+ net 49.0100.0100.0100.0106.00
  log adjacency changes
  affinity-map red bit-position 128
  affinity-map blue bit-position 129
@@ -87,18 +81,27 @@ router isis 1
   advertise link attributes
   mpls traffic-eng level-1-2
   mpls traffic-eng router-id Loopback0
+  propagate level 2 into level 1 route-policy INFRA
   segment-routing mpls
  !
  interface Loopback0
   passive
   address-family ipv4 unicast
-   prefix-sid index 102
-   prefix-sid algorithm 128 index 202
-   prefix-sid algorithm 129 index 302
+   prefix-sid index 106
+   prefix-sid algorithm 128 index 206
+   prefix-sid algorithm 129 index 306
+  !
+ !
+ interface Loopback1
+  passive
+  address-family ipv4 unicast
+   prefix-sid index 1101 n-flag-clear
+   prefix-sid algorithm 128 index 1102 n-flag-clear
+   prefix-sid algorithm 129 index 1103 n-flag-clear
   !
  !
  interface GigabitEthernet0/0/0/0
-  circuit-type level-1
+  circuit-type level-2-only
   point-to-point
   address-family ipv4 unicast
    metric 1
@@ -107,6 +110,15 @@ router isis 1
   !
  !
  interface GigabitEthernet0/0/0/1
+  circuit-type level-2-only
+  point-to-point
+  address-family ipv4 unicast
+   metric 1
+   fast-reroute per-prefix
+   fast-reroute per-prefix ti-lfa
+  !
+ !
+ interface GigabitEthernet0/0/0/2
   circuit-type level-1
   point-to-point
   address-family ipv4 unicast
@@ -115,62 +127,18 @@ router isis 1
    fast-reroute per-prefix ti-lfa
   !
  !
-!
-router bgp 100
- bgp router-id 100.100.100.102
- address-family vpnv4 unicast
- !
- address-family link-state link-state
- !
- neighbor-group RR
-  remote-as 100
-  update-source Loopback0
-  address-family vpnv4 unicast
-  !
- !
- neighbor-group SR-PCE
-  remote-as 100
-  update-source Loopback0
-  address-family link-state link-state
-  !
- !
- neighbor 100.100.100.107
-  use neighbor-group SR-PCE
- !
- neighbor 100.100.100.108
-  use neighbor-group RR
- !
- vrf 100
-  rd 100.100.100.102:100
+ interface GigabitEthernet0/0/0/3
+  circuit-type level-2-only
+  point-to-point
   address-family ipv4 unicast
-   redistribute connected
+   metric 1000
+   fast-reroute per-prefix
+   fast-reroute per-prefix ti-lfa
   !
  !
 !
 segment-routing
  global-block 16000 18000
- traffic-eng
-  candidate-paths
-   all
-    source-address ipv4 100.100.100.102
-   !
-  !
-  on-demand color 100
-   dynamic
-    pcep
-    !
-    anycast-sid-inclusion
-    !
-    metric
-     type igp
-    !
-   !
-  !
-  pcc
-   pce address ipv4 100.100.100.107
-   !
-  !
- !
 !
 end
 
