--- a/topologies/segment-routing/xrd-7-startup.cfg
+++ b/topologies/segment-routing/xrd-7-startup.cfg
@@ -12,54 +12,43 @@
 !! See the License for the specific language governing permissions and
 !! limitations under the License.
 
-hostname xrd-4
+hostname xrd-7
 logging console debugging
 logging monitor debugging
 ssh server vrf default
 username cisco
  group root-lr
  group cisco-support
- password C1sco12345
+ secret 10 $6$nq.zzBkzDwz1z...$SgtSjbwGrRiPc99P7wEJaxd.tJE5rF.7uXA/cD3UqNzTIc7NfaxqHAIWMkwW8jgaV48J1O.oiG79pXNhXoHKO1
+!
+pce
+ address ipv4 100.100.100.107
+ api
+  user cisco
+   password encrypted 14141B180F0B
+  !
+ !
+ logging
+  pcep pcerr-received
+  no-path
+ !
 !
 interface Loopback0
  no shut
- ipv4 address 100.100.100.104 255.255.255.255
-!
-interface Loopback1
- no shut
- ipv4 address 101.104.106.255 255.255.255.255
+ ipv4 address 100.100.100.107 255.255.255.255
 !
 interface GigabitEthernet0/0/0/0
  no shut
- ipv4 address 100.103.104.104 255.255.255.0
+ ipv4 address 100.103.107.107 255.255.255.0
 !
 interface GigabitEthernet0/0/0/1
  no shut
- ipv4 address 100.104.106.104 255.255.255.0
-!
-interface GigabitEthernet0/0/0/2
- no shut
- ipv4 address 100.102.104.104 255.255.255.0
-!
-interface GigabitEthernet0/0/0/3
- no shut
- ipv4 address 100.104.107.104 255.255.255.0
-!
-prefix-set INFRA
-  100.100.100.107/32,
-  100.100.100.108/32
-end-set
-!
-route-policy INFRA
-  if destination in INFRA then
-    pass
-  else
-    drop
-  endif
-end-policy
+ ipv4 address 100.104.107.107 255.255.255.0
 !
 router isis 1
- net 49.0100.0100.0100.0104.00
+ is-type level-2-only
+ net 49.0100.0100.0100.0107.00
+ distribute link-state
  log adjacency changes
  affinity-map red bit-position 128
  affinity-map blue bit-position 129
@@ -79,32 +68,23 @@ router isis 1
   microloop avoidance segment-routing
   advertise passive-only
   advertise link attributes
-  mpls traffic-eng level-1-2
+  mpls traffic-eng level-2-only
   mpls traffic-eng router-id Loopback0
-  propagate level 2 into level 1 route-policy INFRA
   segment-routing mpls
  !
  interface Loopback0
   passive
   address-family ipv4 unicast
-   prefix-sid index 104
-   prefix-sid algorithm 128 index 204
-   prefix-sid algorithm 129 index 304
-  !
- !
- interface Loopback1
-  passive
-  address-family ipv4 unicast
-   prefix-sid index 1101 n-flag-clear
-   prefix-sid algorithm 128 index 1102 n-flag-clear
-   prefix-sid algorithm 129 index 1103 n-flag-clear
+   prefix-sid index 107
+   prefix-sid algorithm 128 index 207
+   prefix-sid algorithm 129 index 307
   !
  !
  interface GigabitEthernet0/0/0/0
   circuit-type level-2-only
   point-to-point
   address-family ipv4 unicast
-   metric 1
+   metric 1000
    fast-reroute per-prefix
    fast-reroute per-prefix ti-lfa
   !
@@ -113,28 +93,27 @@ router isis 1
   circuit-type level-2-only
   point-to-point
   address-family ipv4 unicast
-   metric 1
-   fast-reroute per-prefix
-   fast-reroute per-prefix ti-lfa
-  !
- !
- interface GigabitEthernet0/0/0/2
-  circuit-type level-1
-  point-to-point
-  address-family ipv4 unicast
-   metric 1
-   fast-reroute per-prefix
-   fast-reroute per-prefix ti-lfa
-  !
- !
- interface GigabitEthernet0/0/0/3
-  circuit-type level-2-only
-  point-to-point
-  address-family ipv4 unicast
    metric 1000
    fast-reroute per-prefix
    fast-reroute per-prefix ti-lfa
   !
+ !
+!
+router bgp 100
+ bgp router-id 100.100.100.107
+ address-family link-state link-state
+ !
+ neighbor-group PEs
+  remote-as 100
+  update-source Loopback0
+  address-family link-state link-state
+  !
+ !
+ neighbor 100.100.100.101
+  use neighbor-group PEs
+ !
+ neighbor 100.100.100.102
+  use neighbor-group PEs
  !
 !
 segment-routing
