Update deployment scripts and configurations to use temporary .deploy.cfg files
- Modify .gitignore to include *.deploy.cfg
- Enhance deploy.sh to create deployment configuration files from base configs
- Update injection scripts to search for .deploy.cfg files instead of .cfg
- Adjust test runner to handle .deploy.cfg files for testing
- Revise docker-compose file to reference .deploy.cfg files
- Update deployment documentation to clarify the use of temporary deployment files

--- a/topologies/always-on/docker-compose.xr.yml
+++ b/topologies/always-on/docker-compose.xr.yml
@@ -7,7 +7,7 @@
 services:
   xrd1:
     container_name: xrd-1
-    xr_startup_cfg: xrd-1-startup.cfg
+    xr_startup_cfg: xrd-1-startup.deploy.cfg
     xr_interfaces:
       - Gi0/0/0/0
       - Gi0/0/0/1
@@ -19,7 +19,7 @@ services:
         ipv4_address: 10.10.20.101
   xrd2:
     container_name: xrd-2
-    xr_startup_cfg: xrd-2-startup.cfg
+    xr_startup_cfg: xrd-2-startup.deploy.cfg
     xr_interfaces:
       - Gi0/0/0/0
       - Gi0/0/0/2
@@ -31,7 +31,7 @@ services:
         ipv4_address: 10.10.20.102
   xrd3:
     container_name: xrd-3
-    xr_startup_cfg: xrd-3-startup.cfg
+    xr_startup_cfg: xrd-3-startup.deploy.cfg
     xr_interfaces:
       - Gi0/0/0/1
       - Gi0/0/0/2
