Add fallback user tests and update configuration files with default password comments

--- a/tests/always-on/expected/xrd-1-startup-with-all.cfg
+++ b/tests/always-on/expected/xrd-1-startup-with-all.cfg
@@ -23,6 +23,9 @@ tacacs source-interface MgmtEth0/RP0/CPU0/0 vrf default
 tacacs-server host 10.0.0.100 port 49
  key 0 testing123
 !
+!
+! # C1sco12345 - Default password
+!
 username cisco
  group root-lr
  group cisco-support
