Add netconf VRF configuration to xrd startup files

--- a/topologies/always-on/xrd-1-startup.cfg
+++ b/topologies/always-on/xrd-1-startup.cfg
@@ -2,6 +2,7 @@
 hostname xrd-1
 logging monitor debugging
 ssh server vrf default
+ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
