Adding tacacs to XR always On sandbox (#6)

--- a/topologies/always-on/xrd-2-startup.cfg
+++ b/topologies/always-on/xrd-2-startup.cfg
@@ -1,13 +1,11 @@
+!
 hostname xrd-2
 logging monitor debugging
 ssh server vrf default
+ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
-username cisco
- group root-lr
- group cisco-support
- secret 10 $6$nq.zzBkzDwz1z...$SgtSjbwGrRiPc99P7wEJaxd.tJE5rF.7uXA/cD3UqNzTIc7NfaxqHAIWMkwW8jgaV48J1O.oiG79pXNhXoHKO1
 !
 grpc
  port 57777
