--- a/tests/always-on/expected/xrd-1-startup-with-aaa.cfg
+++ b/tests/always-on/expected/xrd-1-startup-with-aaa.cfg
@@ -1,8 +1,27 @@
 !
+aaa accounting exec default start-stop group tacacs+
+aaa accounting commands default start-stop group tacacs+
+aaa authorization exec default group tacacs+ local
+aaa authorization commands default group tacacs+ local
+aaa authentication login default group tacacs+ local
+!
+line console
+ accounting exec default
+ authorization exec default
+ login authentication default
+!
+line default
+ accounting exec default
+ accounting commands default
+ authorization exec default
+ authorization commands default
+ login authentication default
+ transport input ssh
+!
+!
 hostname xrd-1
 logging monitor debugging
 ssh server vrf default
-ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
