--- a/tests/always-on/expected/xrd-1-startup-with-local-user.cfg
+++ b/tests/always-on/expected/xrd-1-startup-with-local-user.cfg
@@ -1,8 +1,15 @@
 !
+! # C1sco12345 - Default password
+!
+username cisco
+ group root-lr
+ group cisco-support
+ secret 10 $6$nq.zzBkzDwz1z...$SgtSjbwGrRiPc99P7wEJaxd.tJE5rF.7uXA/cD3UqNzTIc7NfaxqHAIWMkwW8jgaV48J1O.oiG79pXNhXoHKO1
+!
+!
 hostname xrd-1
 logging monitor debugging
 ssh server vrf default
-ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
