--- a/tests/always-on/expected/xrd-1-startup-with-tacacs.cfg
+++ b/tests/always-on/expected/xrd-1-startup-with-tacacs.cfg
@@ -1,8 +1,12 @@
 !
+tacacs source-interface MgmtEth0/RP0/CPU0/0 vrf default
+tacacs-server host 10.0.0.100 port 49
+ key 0 testing123
+!
+!
 hostname xrd-1
 logging monitor debugging
 ssh server vrf default
-ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
