--- a/tests/always-on/input/xrd-2-startup.cfg
+++ b/tests/always-on/input/xrd-2-startup.cfg
@@ -1,8 +1,7 @@
 !
-hostname xrd-1
+hostname xrd-2
 logging monitor debugging
 ssh server vrf default
-ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
@@ -18,17 +17,17 @@ netconf-yang agent
 netconf agent tty
 !
 interface GigabitEthernet0/0/0/0
- description to xrd-2 Gi0/0/0/0
- ipv4 address 10.1.2.1/24
+ description to xrd-1 Gi0/0/0/0
+ ipv4 address 10.1.2.2/24
  no shutdown
 !
-interface GigabitEthernet0/0/0/1
- description to xrd-3 Gi0/0/0/1
- ipv4 address 10.1.3.1/24
+interface GigabitEthernet0/0/0/2
+ description to xrd-3 Gi0/0/0/2
+ ipv4 address 10.2.3.2/24
  no shutdown
 !
 interface Loopback0
- ipv4 address 1.1.1.1/32
+ ipv4 address 2.2.2.2/32
 !
 router ospf 1
  area 0
@@ -36,22 +35,28 @@ router ospf 1
   !
   interface GigabitEthernet0/0/0/0
   !
-  interface GigabitEthernet0/0/0/1
+  interface GigabitEthernet0/0/0/2
   !
  !
 !
 router bgp 1
- bgp router-id 1.1.1.1
+ bgp router-id 2.2.2.2
  bgp update-delay 0
  address-family ipv4 unicast
  !
- neighbor 2.2.2.2
+ neighbor 1.1.1.1
   remote-as 1
   update-source Loopback0
   address-family ipv4 unicast
+   route-reflector-client
+  !
+ !
+ neighbor 3.3.3.3
+  remote-as 1
+  update-source Loopback0
+  address-family ipv4 unicast
+   route-reflector-client
   !
  !
 !
 end
-
-
