--- a/tests/always-on/expected/xrd-1-startup-with-all.cfg
+++ b/tests/always-on/expected/xrd-1-startup-with-all.cfg
@@ -1,22 +1,23 @@
 !
-aaa accounting exec default start-stop group tacacs+
-aaa accounting commands default start-stop group tacacs+
 aaa authorization exec default group tacacs+ local
+aaa authorization exec console_author local
 aaa authorization commands default group tacacs+ local
+aaa authorization commands console_author local
 aaa authentication login default group tacacs+ local
+aaa authentication login console_authen local
 !
 line console
- accounting exec default
- authorization exec default
- login authentication default
+ authorization exec console_author
+ authorization commands console_author
+ login authentication console_authen
 !
 line default
- accounting exec default
- accounting commands default
  authorization exec default
  authorization commands default
  login authentication default
  transport input ssh
+!
+vty-pool default 0 99 line-template default
 !
 !
 tacacs source-interface MgmtEth0/RP0/CPU0/0 vrf default
@@ -35,6 +36,7 @@ username cisco
 hostname xrd-1
 logging monitor debugging
 ssh server vrf default
+ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
