--- a/tests/always-on/expected/xrd-1-startup-with-local-user.cfg
+++ b/tests/always-on/expected/xrd-1-startup-with-local-user.cfg
@@ -10,6 +10,7 @@ username cisco
 hostname xrd-1
 logging monitor debugging
 ssh server vrf default
+ssh server netconf vrf default
 banner motd "Hello there! Hoping you are having a great day
 ... Welcome to '$(hostname)',
 your favorite CISCO.IOSXR.IOSXR Sandbox"
